--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONECTION=mongodb+srv://<Neuwelt>:<123neuwelt>@cluster0.xqs6r.mongodb.net/neuwelt
+DB_CONECTION=mongodb://localhost:27020/neuwelt2
