--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.5",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "antd": "^3.24.1",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
