--- a/client/package.json
+++ b/client/package.json
@@ -4,14 +4,14 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-transform-react-jsx": "^7.14.5",
-    "@material-ui/core": "^4.11.4",
-    "@material-ui/icons": "^4.11.2",
     "antd": "^3.24.1",
     "axios": "^0.18.0",
     "bcryptjs": "^2.4.3",
+    "bootstrap": "4.6.0",
     "formik": "^1.5.8",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.2.1",
     "react-icons": "^3.7.0",
