--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "formik": "^1.5.8",
     "moment": "^2.24.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.2.1",
     "react-icons": "^3.7.0",
