--- a/client/package.json
+++ b/client/package.json
@@ -2,30 +2,26 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
   "dependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.14.5",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "antd": "^3.24.1",
     "axios": "^0.18.0",
-    "bcryptjs": "^2.4.3",
+    "express": "^4.17.1",
     "formik": "^1.5.8",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.2.1",
-    "react-icons": "^3.7.0",
     "react-image-gallery": "^1.0.3",
-    "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.0",
-    "redux-form": "^8.2.6",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
-    "socket.io-client": "^2.2.0",
     "yup": "^0.27.0"
   },
   "scripts": {
@@ -50,7 +46,13 @@
     ]
   },
   "devDependencies": {
-    "@babel/helper-builder-react-jsx": "^7.14.5",
+    "babel-eslint": "10.0.1",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-plugin-flowtype": "^5.7.2",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "http-proxy-middleware": "^1.0.3"
   }
 }
