--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "neuwelt-portfolio",
+  "name": "server-myfolio",
   "version": "1.0.0",
   "description": "neuwelt portfolio",
   "main": "index.js",
