--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.6.1",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.2.1",
     "react-image-gallery": "^1.0.3",
