--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "express": "^4.17.1",
     "formik": "^1.5.8",
     "moment": "^2.24.0",
+    "npm": "^7.19.1",
     "react": "^16.8.6",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^16.8.6",
