--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "moment": "^2.24.0",
     "mongoose": "^5.12.13",
     "multer": "^1.4.2",
+    "react-copy-to-clipboard": "^5.0.3",
     "react-redux": "^5.0.7",
+    "reactjs-popup": "^2.0.5",
     "socket.io": "^2.4.1"
   },
   "devDependencies": {
