--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
     "antd": "^3.24.1",
-    "axios": "^0.18.0",
+    "axios": "0.21",
     "express": "^4.17.1",
     "formik": "^1.5.8",
     "moment": "^2.24.0",
