--- a/client/package.json
+++ b/client/package.json
@@ -4,12 +4,13 @@
   "private": true,
   "proxy": "http://localhost:8080",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
-    "antd": "^3.24.1",
-    "axios": "^0.18.0",
+    "antd": "^4.17.1",
+    "axios": "^0.24.0",
     "express": "^4.17.1",
-    "formik": "^1.5.8",
+    "formik": "^2.2.9",
     "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.6.1",
@@ -18,11 +19,11 @@
     "react-image-gallery": "^1.0.3",
     "react-redux": "^7.1.0-rc.1",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.0.1",
+    "react-scripts": "^4.0.3",
     "redux": "^4.0.0",
     "redux-promise": "^0.6.0",
     "redux-thunk": "^2.3.0",
-    "yup": "^0.27.0"
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "babel-eslint": "10.0.1",
     "eslint-config-react-app": "^6.0.0",
     "eslint-plugin-flowtype": "^5.7.2",
     "eslint-plugin-import": "^2.23.4",
